make lesson title wrap correctly

--- a/source/stylesheets/header.scss
+++ b/source/stylesheets/header.scss
@@ -429,7 +429,7 @@
   }
 
   .lesson-title-md {
-    display: inline;
+    display: inline-block;
     font-family: Mulish;
     font-style: normal;
     font-weight: 800;
@@ -456,7 +456,7 @@
   }
 
   .lesson-title {
-    display: inline;
+    display: inline-block;
   }
 
   .nav-logo {
